<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Space
        android:id="@+id/spaceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginHeaderId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginHeaderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHeader"
        android:textColor="@color/splashColor"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/loginSubHeaderId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceId" />

    <TextView
        android:id="@+id/loginSubHeaderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginSubHeader"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/emailTextFieldId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeaderId" />

    <EditText
        android:id="@+id/emailTextFieldId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/passTextFieldId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginSubHeaderId" />

    <Space
        android:id="@+id/space2Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/passTextFieldId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextFieldId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextFieldId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="36dp"
        android:hint="@string/pass"
        android:scrollbarSize="25dp"
        android:text="@string/pass"
        android:textSize="16sp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2Id"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/splashColor"
        android:onClick="onClick"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/registration_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTextFieldId" />

    <LinearLayout
        android:id="@+id/registration_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTextFieldId">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@color/transparent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/splashColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>